# VkMod2

./: .clangd  .gitignore  21_shader_ubo.frag.inl  21_shader_ubo.vert.inl  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  README.md  debug  shader_tempTst.frag.inl  shader_tempTst.vert.inl
shaders/: 21_shader_ubo.frag  21_shader_ubo.frag.spv  21_shader_ubo.vert  21_shader_ubo.vert.inl  21_shader_ubo.vert.spv  a.spv  shader_tempTst.frag  shader_tempTst.frag.spv  shader_tempTst.vert  shader_tempTst.vert.spv
src/: 21_shader_ubo.frag.inl  21_shader_ubo.frag.txt  21_shader_ubo.frag.txt.inl  21_shader_ubo.vert.inl  21_shader_ubo.vert.txt  21_shader_ubo.vert.txt.inl  Buffer.cpp  Buffer.hpp  Buffers.hpp  CMakeLists.txt  Interface.cpp  Interface.hpp  Pipeline.hpp  Pipeline2.cpp  Pipeline2.hpp  Queues.hpp  ShaderSPIRVUtils.cpp  ShaderSPIRVUtils.hpp  SwapChain.cpp  SwapChain.hpp  SwapChainSupportDetails.hpp  Texture.cpp  Texture.hpp  UniformBufferObject.hpp  VKI.hpp  VkDev.hpp  VkInit.hpp  VkInitAbs.cpp  VkInitAbs.hpp  VkTemp.hpp  VkUtils2.h  VkUtils2.hpp  VkUtils2.ixx  VkUtilsXBase.hpp  Vks.tpp  Win.cpp  Win.hpp  Window.cpp  fakeFBO.cpp  fakeFBO.hpp  (+18 more)
